<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.home.sparrow.examplecalculator.SimpleCalculator">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/calcText"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Clear"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/clear"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/leftBracket"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/leftBracket"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/rightBracket"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/rightBracket"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/divided"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/divided"
                    android:onClick="onClick"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/one"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"
                    android:textSize="80sp"
                    android:id="@+id/one"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/two"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/two"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/three"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/three"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/multi"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/multi"
                    android:onClick="onClick"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/four"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/four"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/five"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/five"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/six"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/six"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/minus"
                    android:onClick="onClick"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/seven"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/seven"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/eight"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/eight"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/nine"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/nine"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="80sp"
                    android:id="@+id/plus"
                    android:onClick="onClick"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
